updated Jenkins file with build stage